Add Google verification tag

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     }
   }
     </script>
+    <meta name="google-site-verification" content="pG2G4oBPcxq6Bv75jABRIBEJGYZNFZGp_vO1sxHVtCU" />
   </head>
   
   <body>
