Modify favicon files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Eméric R. S. TOGNON | Développeur Full Stack & IoT" />
     <meta property="og:description" content="Développeur Full Stack passionné, spécialisé en React, Node.js et systèmes embarqués. Lead Tech Communities Clubs." />
     <meta property="og:url" content="https://leadertgn.netlify.app/" />
-    <meta property="og:image" content="https://leadertgn.netlify.app/og-image.jpg" />
+    <meta property="og:image" content="https://leadertgn.netlify.app/og-image.png" />
     <meta property="og:image:alt" content="Portfolio Eméric TOGNON - Développeur Full Stack" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:locale:alternate" content="en_US" />
@@ -26,15 +26,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Eméric R. S. TOGNON | Développeur Full Stack" />
     <meta name="twitter:description" content="Portfolio développeur Full Stack & IoT. React, Node.js, Django, Arduino, ESP32." />
-    <meta name="twitter:image" content="images/og-image.jpg" />
+    <meta name="twitter:image" content="/og-image.png" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Leadertgn" />
-    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <meta name="theme-color" content="#2563eb" />
     
