--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         "name": "Eméric R. S. TOGNON",
         "url": "https://leadertgn.me/",
         "image": "https://leadertgn.me/images/me.jpg",
-        "jobTitle": "Développeur Full Stack & Systèmes Embarqués",
+        "jobTitle": "Développeur Full Stack et Systèmes Embarqués",
         "description": "Développeur Full Stack passionné avec expertise en React, Node.js, Django et systèmes embarqués IoT",
         "knowsAbout": [
           "React",
@@ -81,7 +81,7 @@
         ],
         "alumniOf": {
           "@type": "EducationalOrganization",
-          "name": "L'Institut National Supérieur de Technologie Industrielle (INSTI)"
+          "name": "Institut National Supérieur de Technologie Industrielle (INSTI)"
         },
         "sameAs": [
           "https://github.com/leadertgn",
