Add Open Graph image dimensions and update og-image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     />
     <meta property="og:url" content="https://leadertgn.me/" />
     <meta property="og:image" content="https://leadertgn.me/og-image.png" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Portfolio Eméric TOGNON - Développeur Full Stack" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:locale:alternate" content="en_US" />
@@ -90,7 +92,6 @@
         ]
       }
     </script>
-    <meta name="google-site-verification" content="pG2G4oBPcxq6Bv75jABRIBEJGYZNFZGp_vO1sxHVtCU" />
   </head>
 
   <body>
