Update leadership section with link to Tech Communities Clubs and improve Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     />
     <meta property="og:url" content="https://leadertgn.me/" />
     <meta property="og:image" content="https://leadertgn.me/og-image.png" />
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Portfolio Eméric TOGNON - Développeur Full Stack" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:locale:alternate" content="en_US" />
@@ -88,7 +88,8 @@
         "sameAs": [
           "https://github.com/leadertgn",
           "https://www.linkedin.com/in/tognonemeric/",
-          "https://web.facebook.com/leadertgn"
+          "https://web.facebook.com/leadertgn",
+          "https://tcc.hyver.org/m/tognon-emeric-6625"
         ]
       }
     </script>
